@@ -5,6 +5,8 @@ CHANGES IN CUPS V1.4.0
 
 	- Localization updates (STR #3223, STR #3246, STR #3248)
 	- Documentation updates (STR #3225, STR #3230)
+	- The scheduler did not protect against bad job control files in all
+	  cases (STR #3253)
 	- The scheduler did not encode "+" in model names (STR #3254)
 	- The web interface didn't show the default options (STR #3244)
 	- The IPP and LPD backends needed print data before they would do an
